# ChatOrbitAi

./: .gitignore  package-lock.json  package.json  tsconfig.json
backend/: ARCHITECTURE.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6b915a4959af_initial_database_schema.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/dependencies/: whatsapp.py
backend/app/core/: config.py  security.py
backend/app/db/: dependencies.py  session.py
backend/app/db/models/: __init__.py  conversation.py  delivery_event.py  message.py
backend/app/events/: dispatcher.py  event_types.py
backend/app/modules/conversations/: __init__.py  delivery_repository.py  events.py  message_repository.py  repository.py  schemas.py  service.py
backend/app/modules/whatsapp/: events.py  normalizer.py  repository.py  router.py  schemas.py  service.py
backend/whatsapp_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/app/: globals.css  layout.tsx
src/app/(dashboard)/: layout.tsx
src/app/(marketing)/: layout.tsx  page.tsx
src/components/layouts/: app-header.tsx  app-logo.tsx  app-shell.tsx  app-sidebar.tsx
src/components/shared/: activity-feed.tsx  empty-state.tsx  page-header.tsx  quick-actions.tsx  stat-card.tsx  theme-toggle.tsx  toast.ts  user-menu.tsx
src/components/ui/: card.tsx  modal.tsx  skeleton.tsx  table.tsx
src/constants/: branding.ts  navigation.ts  routes.ts
src/features/agents/: constants.ts  index.ts  (+4 more)
src/hooks/: use-click-outside.ts
src/lib/: api-client.ts
src/providers/: theme-provider.tsx
(+114 files in other folders)
