[project]
name = "whatsapp-ai-backend"
version = "0.1.0"
description = "Backend for WhatsApp AI Automation SaaS"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
